tests/fixtures/positive/supply-chain/version-catalog-unused/app/build.gradle.kts
plugins {
    alias(libs.plugins.android.application)
}

dependencies {
    implementation(libs.bundles.network)
    implementation(libs.okhttp)
}
