tests/fixtures/negative/supply-chain/version-catalog-unused/app/build.gradle.kts
plugins {
    alias(libs.plugins.android.application)
}

dependencies {
    implementation(libs.okhttp)
    implementation(libs.kotlin.stdlib)
    implementation(libs.bundles.network)
}
